# TwitchBot

./: .gitignore  Cargo.toml  Justfile  README.md  Secrets.example.toml  docker-compose.yml
migrations/: .gitignore  connect.example.sh  schemas_down.sql  schemas_up.sql
src/: axum.rs  command_parser.rs  config.rs  database.rs  error.rs  main.rs  shuttle_integration.rs  state.rs  tokenstore.rs
src/commands/: apistatus.rs  bpb.rs  bwr.rs  map.rs  mod.rs  most_recent_run.rs  pb.rs  player.rs  recent.rs  record.rs  wr.rs
src/parsing/: mod.rs  parse_args.rs
